--- a/index.html
+++ b/index.html
@@ -1,19 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype>
+<html>
 <head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta charset="utf-8" />
 <title>个人作品集 | 易车网 Bitauto.com</title>
-<meta name="description" content="冰瓜糖 个人作品集" />
-<meta name="keywords" content="冰瓜糖 个人作品集 冰瓜糖 个人作品集 冰瓜糖 个人作品集" />
-
-
 </head>
 <body>
-
- 个人说明个人说明个人说明个人说明个人说明个人说明个人说明个人说明个人说明个人说明
-  
-
+abc
 </body>
-
-
 </html>
