--- a/index.html
+++ b/index.html
@@ -276,5 +276,39 @@
 
 </div><!-- 正文 结束 -->
 <a id="returnTop" href="javascript:;">回到顶部</a> 
+
+
+<!-- 瀑布流效果 -->
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery.wookmark.js"></script>
+<script type="text/javascript">
+(function ($){
+  var handler = $('#tiles li');
+
+  handler.wookmark({
+      //  调用插件的布局函数
+      autoResize: true, // 当浏览器大小改变时会自动更新布局 
+      container: $('#main'), // 可选配置项, 用于一些额外的CSS样式
+      offset:30, // 可选配置项, 表格项(li)的间距  
+      outerOffset:5, // 可选配置项, 容器边缘的距离
+      itemWidth: 235 // 可选配置项, 表格项(li)的宽度  
+  });
+})(jQuery);
+</script>
+<!-- 瀑布流效果 -->
+  
+<!--图片半透效果-->
+<script type='text/javascript' src='js/jfade.js'></script>
+<script type="text/javascript">  
+$().ready(function() {
+	$('.jfade_image').jfade();
+
+});  
+</script>  
+<!--图片半透效果-->
+
+<!--回到顶部代码-->
+<script src="js/top.js" type="text/javascript"></script>
+<!--回到顶部代码 结束-->
 </body>
 </html>
