--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>个人作品集 | 易车网 Bitauto.com</title>
+<title>冰瓜糖个人作品集</title>
+<meta name="description" content="冰瓜糖 个人作品集" />
+<meta name="keywords" content="冰瓜糖 个人作品集 冰瓜糖 个人作品集 冰瓜糖 个人作品集" />
 
 <!-- 定义样式 开始 -->
 <link type="text/css" rel="stylesheet" href="css/reset.css" />
