--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta charset="utf-8" />
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>冰瓜糖个人作品集</title>
 <meta name="description" content="冰瓜糖 个人作品集" />
 <meta name="keywords" content="冰瓜糖 个人作品集 冰瓜糖 个人作品集 冰瓜糖 个人作品集" />
