--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 					<a href="http" target="_blank"><img src="images/img/img5.jpg" width="235"></a>
 					<p>一一一一一一一</p>
 				</li>-->
+                <li class="jfade_image">
+					<a href="http://www.bitauto.com/zhuanti/ad_topic/sikeda4yue/" target="_blank"><img src="images/img/img59.jpg" width="235" height="418"></a>
+					<p>惠聚实力  放野中原</p>
+				</li>
+                <li class="jfade_image">
+					<a href="http://www.bitauto.com/zhuanti/ad_topic/byd/hn/0408/" target="_blank"><img src="images/img/img58.jpg" width="235" height="459"></a>
+					<p>2014款速锐、S6</p>
+				</li>
 				<li class="jfade_image">
 					<a href="http://www.bitauto.com/zhuanti/ad_topic/nissan/01/0318/" target="_blank"><img src="images/img/img57.jpg" width="235" height="369"></a>
 					<p>东风日产骏马奔腾购车季</p>
