--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="coa-01">
         <p class="f14 bold bg01">About me</p>
 		<p>E-mail：hui2011@163.com</p>
+        <p>站酷：<a href="http://hui2011.zcool.com.cn/" target="_blank">hui2011.zcool.com.cn</a></p>
         <p>博客：<a href="http://hui2011.blog.163.com/" target="_blank">hui2011.blog.163.com</a></p>
 		<p>微博：<a href="http://www.weibo.com/hui2011" target="_blank">www.weibo.com/hui2011</a></p>
 		<p>QQ：364050776</p>
