--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
 					<p>一一一一一一一</p>
 				</li>-->
                 <li class="jfade_image">
+					<a href="http://www.bitauto.com/zhuanti/ad_topic/ford/0505/" target="_blank"><img src="images/img/img62.jpg" width="235" height="505"></a>
+					<p>长安福特-翼虎</p>
+				</li>
+                <li class="jfade_image">
+					<a href="http://chezhan.bitauto.com/nazhijiexinda7/" target="_blank"><img src="images/img/img61.jpg" width="235" height="424"></a>
+					<p>纳智捷 新大7 suv</p>
+				</li>
+                <li class="jfade_image">
+					<a href="http://www.bitauto.com/zhuanti/ad_topic/futetuan/" target="_blank"><img src="images/img/img60.jpg" width="235" height="342"></a>
+					<p>长安福特专题</p>
+				</li>
+                <li class="jfade_image">
 					<a href="http://www.bitauto.com/zhuanti/ad_topic/sikeda4yue/" target="_blank"><img src="images/img/img59.jpg" width="235" height="418"></a>
 					<p>惠聚实力  放野中原</p>
 				</li>
