--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 					<p>一一一一一一一</p>
 				</li>-->
                 <li class="jfade_image">
+					<a href="http://www.bitauto.com/zhuanti/region/nazhijieyou6zhuanti/" target="_blank"><img src="images/img/img63.jpg" width="235" height="384"></a>
+					<p>纳智捷 优6suv   新时尚 suv来袭</p>
+				</li>
+                <li class="jfade_image">
 					<a href="http://www.bitauto.com/zhuanti/ad_topic/ford/0505/" target="_blank"><img src="images/img/img62.jpg" width="235" height="505"></a>
 					<p>长安福特-翼虎</p>
 				</li>
