--- a/index.html
+++ b/index.html
@@ -38,8 +38,16 @@
 					<p>一一一一一一一</p>
 				</li>-->
                 <li class="jfade_image">
+					<a href="http://www.bitauto.com/zhuanti/ad_topic/xtl/0612/" target="_blank"><img src="images/img/img65.jpg" width="235" height="440"></a>
+					<p>玩“赚”世界杯 疯狂大竞猜</p>
+				</li>
+                <li class="jfade_image">
+					<a href="http://www.bitauto.com/zhuanti/ad_topic/rongwei6yue/" target="_blank"><img src="images/img/img64.jpg" width="235" height="400"></a>
+					<p>百万油礼 夏降到底 荣威</p>
+				</li>
+                <li class="jfade_image">
 					<a href="http://www.bitauto.com/zhuanti/region/nazhijieyou6zhuanti/" target="_blank"><img src="images/img/img63.jpg" width="235" height="384"></a>
-					<p>纳智捷 优6suv   新时尚 suv来袭</p>
+					<p>纳智捷 优6suv 新时尚 suv来袭</p>
 				</li>
                 <li class="jfade_image">
 					<a href="http://www.bitauto.com/zhuanti/ad_topic/ford/0505/" target="_blank"><img src="images/img/img62.jpg" width="235" height="505"></a>
