--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 					<p>一一一一一一一</p>
 				</li>-->
                 <li class="jfade_image">
+					<a href="http://www.bitauto.com/zhuanti/ad_topic/buick/0703/" target="_blank"><img src="images/img/img67.jpg" width="235" height="426"></a>
+					<p>别克助威 32梦之队 邀你激情共勉</p>
+				</li>
+                <li class="jfade_image">
+					<a href="http://www.bitauto.com/zhuanti/ad_topic/jufeng/" target="_blank"><img src="images/img/img66.jpg" width="235" height="253"></a>
+					<p>昕动时刻 明智之选</p>
+				</li>
+                <li class="jfade_image">
 					<a href="http://www.bitauto.com/zhuanti/ad_topic/xtl/0612/" target="_blank"><img src="images/img/img65.jpg" width="235" height="440"></a>
 					<p>玩“赚”世界杯 疯狂大竞猜</p>
 				</li>
@@ -102,7 +110,7 @@
 					<p>广州市锦众汽车贸易有限公司</p>
 				</li>
 				<li class="jfade_image">
-					<a href="http://www.bitauto.com/zhuanti/ad_topic/fordnewmondeo131213/#page/index" target="_blank"><img src="images/img/img49.jpg" width="235" height="158"></a>
+					<a href="http://www.bitauto.com/zhuanti/ad_topic/fordnewmondeo131213/#page/index" target="_blank"><img src="images/img/img49.jpg" width="235" height="626"></a>
 					<p>全新一代蒙迪欧荣耀上市</p>
 				</li>
 				<li class="jfade_image">
