--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 					<p>一一一一一一一</p>
 				</li>-->
                 <li class="jfade_image">
+					<a href="http://www.bitauto.com/zhuanti/ad_topic/nissan/0707/" target="_blank"><img src="images/img/img69.jpg" width="235" height="491"></a>
+					<p>东风日产 王者豪门 实力见证</p>
+				</li>
+                <li class="jfade_image">
+					<a href="http://www.bitauto.com/zhuanti/region/qichen0702/" target="_blank"><img src="images/img/img68.jpg" width="235" height="407"></a>
+					<p>启辰R30上市</p>
+				</li>
+                <li class="jfade_image">
 					<a href="http://www.bitauto.com/zhuanti/ad_topic/buick/0703/" target="_blank"><img src="images/img/img67.jpg" width="235" height="426"></a>
 					<p>别克助威 32梦之队 邀你激情共勉</p>
 				</li>
