--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 					<p>一一一一一一一</p>
 				</li>-->
                 <li class="jfade_image">
+					<a href="http://www.bitauto.com/zhuanti/ad_topic/sibalu/" target="_blank"><img src="images/img/img72.jpg" width="235" height="485"></a>
+					<p>2014肇庆中运斯巴鲁</p>
+				</li>
+                <li class="jfade_image">
+					<a href="http://www.bitauto.com/zhuanti/ad_topic/nissan/dongguan/1201/" target="_blank"><img src="images/img/img71.jpg" width="235" height="428"></a>
+					<p>东风日产启辰</p>
+				</li>
+                <li class="jfade_image">
 					<a href="http://www.bitauto.com/zhuanti/ad_topic/gq/toyota/henan0728/" target="_blank"><img src="images/img/img70.jpg" width="235" height="526"></a>
 					<p>汉兰达，我可以更远</p>
 				</li>
